force-app/main/default/objects/ppmail__Unlimail_Log__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Group_Key__c</fullName>
        <label>Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Unlimail Log</label>
    <listViews>
        <fullName>ppmail__All_Logs</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ppmail__Details__c</columns>
        <columns>ppmail__Group_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <nameField>
        <displayFormat>ULOG-{000000000}</displayFormat>
        <label>Unlimail Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unlimail Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>